[package]
name = "sr-playground"
version = "0.1.0"
authors = ["Piotr Mikulski <piotr@near.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# minisketch-rs = "0.1.9"
ahash = "0.6.3"
twox-hash = "1.6.0"
rand = "0.8.3"

[[bench]]
name = "new_algo"
harness = false

[dev-dependencies]
bencher = "0.1.5"
